--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Página con imagen redonda y botón de neón</title>
+<title> Regalo de MJ 💗 </title>
 </head>
 <body>
   <div class="container">
-    <img class="round-image" src="tu_imagen.jpg" alt="Imagen Redonda">
+    <img class="round-image" src="https://dragon.online-convert.com/es/download-file/72b1a88e-02a0-463d-8924-5762c95e6f65/773a070b-4766-44f7-92c6-652f511a1d9a.png" alt="Imagen Redonda">
     <button class="neon-button" onclick="cambiarColor()">Presionar</button>
   </div>
   <script src="script.js"></script>
