--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
 </head>
 <body>
   <div class="container">
-    <img class="round-image" src="https://dragon.online-convert.com/es/download-file/f84e9e95-54d2-4c0b-82be-719fc7a82d4c/52e0f395-dfae-41df-8eaf-c27fe8ce9dbe.png" alt="Imagen Redonda">
-    <button class="neon-button" onclick="cambiarColor()">Presionar</button>
+    <img class="round-image" src="https://dragon.online-convert.com/es/download-file/22fa861c-8bc1-4839-9789-867bdc397556/9c385998-fd25-48eb-b847-b79a06ab0d6d.png" alt="Imagen Redonda">
+    
   </div>
+  
   <script src="script.js"></script>
 </body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>Botón de Luz de Neón con CSS</title>
+    <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+    <a href="#" class="btn-neon">
+        <span id="span1"></span>
+        <span id="span2"></span>
+        <span id="span3"></span>
+        <span id="span4"></span>
+        BOTON NEON
+    </a>
 </html>
