--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-<title> Regalo de MJ 💗 </title>
-</head>
-<body>
-  <div class="container">
-    <img class="round-image" src="https://dragon.online-convert.com/es/download-file/22fa861c-8bc1-4839-9789-867bdc397556/9c385998-fd25-48eb-b847-b79a06ab0d6d.png" alt="Imagen Redonda">
-    
-  </div>
-  
-  <script src="script.js"></script>
-</body>
-  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Botón de Luz de Neón con CSS</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>Menú de regalo para MJ 💗</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="#" class="btn-neon">
+    <a href="https://carlosxd19.github.io/cumplea-os/" class="btn-neon">
         <span id="span1"></span>
         <span id="span2"></span>
         <span id="span3"></span>
         <span id="span4"></span>
-        BOTON NEON
+        ABRE EL REGALO GUAPA, ESPERO TE GUSTE 💗😘
     </a>
+
+</body>
+ <div class="container">
+    <img class="round-image" src="mj.jfif" alt="Imagen Redonda">
+    
+  </div>
 </html>
