--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </body>
  <div class="container">
-    <img class="round-image" src="https://dragon.online-convert.com/es/download-file/ebb58901-d1d9-487d-94df-7d10a03adef7/c35fa3fb-4973-48ab-a94a-c802f97e83a9.png" alt="Imagen Redonda">
+    <img class="round-image" src="img/mariaj.png" alt="Imagen Redonda">
     
   </div>
 </html>
