--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Menú de regalo para MJ 💗</title>
-      <link rel="icon" href="https://dragon.online-convert.com/es/download-file/8126a363-c926-4edf-b86d-3ebbe18e3ae7/2d4e237b-236a-4313-9233-db663430b2b7.ico" type="image/x-icon">
+      <link rel="icon" href="img/mj.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
